Fixes alignment of user name on the header

--- a/src/public/scss/styles.scss
+++ b/src/public/scss/styles.scss
@@ -59,6 +59,7 @@ table.details {
   float: right;
   font-weight: normal;
   margin-top: 0.625em;
+  margin-right: 15px;
 }
 
 // Hide side-bar on mobile
